# AICapstoneProject_IC

./: README.md  datasheet.md  model_card.md  pyproject.toml
data/: function_1_inputs.npy  function_1_outputs.npy  function_2_inputs.npy  function_2_outputs.npy  function_3_inputs.npy  function_3_outputs.npy  function_4_inputs.npy  function_4_outputs.npy  function_5_inputs.npy  function_5_outputs.npy  function_6_inputs.npy  function_6_outputs.npy  function_7_inputs.npy  function_7_outputs.npy  function_8_inputs.npy  function_8_outputs.npy
notebooks/: 01_function_1.ipynb  02_function_2.ipynb  03_function_3.ipynb  04_function_4.ipynb  05_function_5.ipynb  06_function_6.ipynb
src/bbo/: acquisition.py  bayesian_optimisation.py  clustering.py  data.py  decision_trees.py  enums.py  linear_regression.py  neural_networks.py  plotting.py  random.py  stats.py  support_vector_machines.py  utils.py
