[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AICapstoneProject_IC"
version = "1.0.0"
description = "AI/ML Capstone Project"
authors = [
    {name = "Hassan Chagani"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.0",
    "matplotlib>=3.9",
    "numpy>=2.3",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "seaborn>=0.13",
    "torch>=2.1",
]

[tool.setuptools.packages.find]
where = ["src"]
